Change links, remove unnecessary links

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -42,7 +42,7 @@
   list-style: none;
   margin: 0 0 30px;
   padding: 0;
-  column-count: 2;
+  //column-count: 2;
   column-gap: $layout-gutter-width / 2;
 
   @include mq($bp--desktop) {
