add producto logo page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,8 @@
 
 @import './partials/base';
 
+@import './partials/base-design-site';
+
 @import './partials/forms';
 
 @import './partials/modals';
