PLY-32; add gray color for menu

--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -20,6 +20,7 @@ $color-gray--a: #a9a9a9;
 $color-gray--d: #d5d5d5;
 $color-gray--e: #eaeaea;
 $color-gray--f: #f9f9f9;
+$color-gray--light: #f4f5f7;
 $color-fire: #ff4c00;
 $color-fire--dark: #d64305;
 $color-fire--dark2: #b74414;
