PLY-38; add mint color

--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -27,6 +27,7 @@ $color-fire--light: #ff7135;
 $color-ronchi: #EBC959;
 $color-green: #64ccc9;
 $color-green--dark: #35a09c;
+$color-mint: #a0d8b3;
 $color-green--dark2: mix($color-black, $color-green--dark, 15%);
 $color-slate: #435363;
 $color-slate--light: #7a8a98;
