--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -41,6 +41,9 @@ $color-peach--light: #fffefa;
 $color-orange: #f79737;
 $color-orange--dark: mix($color-black, $color-orange, 10%);
 $color-orange--light: #f6d18f;
+$color-fm-gold: #86754D;
+
+$color-lt-grey-20: #e7eaed;
 // Fonts
 $font-gotham: 'Gotham A',
 'Gotham B',
