--- a/src/routes/Colors/styles.scss
+++ b/src/routes/Colors/styles.scss
@@ -70,7 +70,7 @@ span {
     }
 
     &.tradeshow,
-    &.print-usecase {
+    &.use-case {
       .content__text {
         width: 38%;
         padding-top: 20px;
@@ -109,77 +109,462 @@ span {
         width: 69px;
         background-color: $color-regent-gray;
         position: absolute;
+      }
+    }
+
+    &.tradeshow {
+      .content__image::after {
         left: 515px;
         top: 55px;
       }
     }
 
-    &.print-usecase {
+    &.use-case {
       .content__text {
         width: 37%;
 
         .content__row {
-          margin-top: 263px;
-        }
+          .content__image {
+            img {
+              width: 23px;
+              height: 23px;
+              display: block;
+            }
 
+            &.slate-dk {
+              &::after,
+              &::before {
+                background-color: $color-slate--dark;
+              }
+            }
+
+            &.slate {
+              &::after,
+              &::before {
+                background-color: $color-slate;
+              }
+            }
+
+            &.slate-lt {
+              &::after,
+              &::before {
+                background-color: $color-regent-gray;
+              }
+            }
+
+            &.solid-lt-grey-60 {
+              &::after,
+              &::before {
+                background-color: $color-lt-grey-60;
+              }
+            }
+
+            &.solid-lt-grey-20 {
+              &::after,
+              &::before {
+                background-color: $color-lt-grey-20;
+              }
+            }
+
+            &.blue-bright::after {
+              background-color: $color-blue--bright;
+            }
+
+            &.blue-rich::after {
+              background-color: $color-blue--rich;
+            }
+
+            &.gold::after {
+              background-color: $color-gold;
+            }
+
+            &.sea::after {
+              background-color: $color-green;
+            }
+
+            &.orange {
+              &::after,
+              &::before {
+                background-color: $color-orange;
+              }
+            }
+
+            &.solid-orange {
+              &::after,
+              &::before {
+                background-color: $color-solid-orange;
+              }
+            }
+
+            &.fire {
+              &::after,
+              &::before {
+                background-color: $color-fire;
+              }
+            }
+
+            &.green-dark::after {
+              background-color: $color-green--dark;
+            }
+
+            &.green-dark2::after {
+              background-color: $color-green--dark2;
+            }
+
+            &.solid-teal {
+              &::after {
+                background-color: $color-solid-teal;
+              }
+            }
+          }
+        }
+      }
+
+      &.print {
         .content__image {
           img {
-            width: 23px;
-            height: 23px;
-            display: block;
-            margin-top: 12px;
+            width: 351px;
+            height: 849px;
           }
+        }
 
-          &.slate-lt::after {
-            background-color: $color-regent-gray;
-            width: 348px;
-            left: -358px;
-          }
+        .content__text {
+          .content__row {
+            margin-top: 263px;
 
-          &.slate::after {
-            background-color: $color-slate;
-            width: 406px;
-            left: -416px;
-          }
+            .content__image {
+              img {
+                margin-top: 12px;
+              }
 
-          &.sea {
-            margin-top: 32px;
-          }
+              &.slate-lt::after {
+                width: 348px;
+                left: -358px;
+              }
 
-          &.sea::after {
-            background-color: $color-green;
-            width: 249px;
-            left: -259px;
-          }
+              &.slate::after {
+                width: 406px;
+                left: -416px;
+              }
 
-          &.orange::after {
-            background-color: $color-orange;
-            width: 395px;
-            left: -405px;
-          }
+              &.sea {
+                margin-top: 32px;
+              }
 
-          &.fire::after {
-            background-color: $color-fire;
-            width: 263px;
-            left: -273px;
+              &.sea::after {
+                width: 249px;
+                left: -259px;
+              }
+
+              &.orange::after {
+                width: 395px;
+                left: -405px;
+              }
+
+              &.fire::after {
+                width: 263px;
+                left: -273px;
+              }
+            }
+
+            .content__image::after {
+              top: 12px;
+            }
           }
         }
 
         .content__image::after {
-          top: 12px;
+          width: 212px;
+          left: 365px;
+          top: 55px;
         }
       }
 
-      .content__image {
-        img {
-          width: 351px;
-          height: 849px;
+      &.web {
+        .content__image {
+          img {
+            width: 594px;
+            height: 802px;
+          }
+
+          &::after {
+            width: 90px;
+            left: 550px;
+            top: 92px;
+          }
+        }
+
+        .content__text {
+          width: 32%;
+          padding-top: 55px;
+
+          .content__text-inner {
+            padding: 0;
+          }
+
+          .content__row {
+            margin-top: 89px;
+
+            .content__image {
+              img {
+                margin-top: 12px;
+              }
+
+              &.fire {
+                &::before {
+                  background-color: $color-fire;
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  z-index: 1;
+                  left: -384px;
+                  top: -176px;
+                  bottom: 0;
+                  height: 188px;
+                  width: 1px;
+                }
+
+                &::after {
+                  width: 374px;
+                  left: -384px;
+                }
+              }
+
+              &.slate-dk {
+                margin-top: 14px;
+
+                &::after {
+                  width: 377px;
+                  left: -387px;
+                }
+              }
+
+              &.slate-lt {
+                margin-top: 13px;
+
+                &::after {
+                  width: 364px;
+                  left: -374px;
+                }
+              }
+
+              &.blue-bright {
+                margin-top: 34px;
+
+                &::after {
+                  width: 442px;
+                  left: -452px;
+                }
+              }
+
+              &.blue-rich {
+                margin-top: 11px;
+
+                &::after {
+                  width: 225px;
+                  left: -235px;
+                }
+              }
+
+              &.gold {
+                margin-top: 48px;
+
+                &::after {
+                  width: 400px;
+                  left: -410px;
+                }
+              }
+
+              &.green-dark2::after {
+                width: 223px;
+                left: -233px;
+              }
+
+              &.green-dark {
+                margin-top: 82px;
+
+                &::after {
+                  width: 180px;
+                  left: -190px;
+                }
+              }
+
+              &::after {
+                top: 12px;
+              }
+            }
+          }
         }
       }
 
-      .content__image::after {
-        width: 212px;
-        left: 365px;
+      &.ui {
+        .content__image {
+          img {
+            width: 425px;
+            height: 511px;
+          }
+
+          &::after {
+            width: 193px;
+            left: 440px;
+            top: 37px;
+          }
+        }
+
+        .content__text {
+          width: 32%;
+          padding-top: 0;
+
+          .content__text-inner {
+            padding: 0;
+          }
+
+          .content__row {
+            margin-top: 45px;
+
+            .content__image {
+              img {
+                margin-top: 12px;
+              }
+
+              &.slate-dk {
+                &::before {
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  z-index: 1;
+                  left: -294px;
+                  top: -8px;
+                  bottom: 0;
+                  height: 19px;
+                  width: 1px;
+                }
+
+                &::after {
+                  width: 284px;
+                  left: -294px;
+                }
+              }
+
+              &.solid-lt-grey-20 {
+                &::after {
+                  width: 225px;
+                  left: -235px;
+                }
+              }
+
+              &.slate {
+                &::before {
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  z-index: 1;
+                  left: -424px;
+                  top: -159px;
+                  bottom: 0;
+                  height: 170px;
+                  width: 1px;
+                }
+
+                &::after {
+                  width: 414px;
+                  left: -424px;
+                }
+              }
+
+              &.slate-lt {
+                &::before {
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  z-index: 1;
+                  left: -275px;
+                  top: -284px;
+                  bottom: 0;
+                  height: 295px;
+                  width: 1px;
+                }
+
+                &::after {
+                  width: 265px;
+                  left: -275px;
+                }
+              }
+
+              &.solid-lt-grey-60 {
+                &::before {
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  z-index: 1;
+                  left: -250px;
+                  top: -319px;
+                  bottom: 0;
+                  height: 330px;
+                  width: 1px;
+                }
+
+                &::after {
+                  width: 240px;
+                  left: -250px;
+                }
+              }
+
+              &.solid-orange {
+                &::before {
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  z-index: 1;
+                  left: -558px;
+                  top: -314px;
+                  bottom: 0;
+                  height: 325px;
+                  width: 1px;
+                }
+
+                &::after {
+                  width: 548px;
+                  left: -558px;
+                }
+              }
+
+              &.orange {
+                &::before {
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  z-index: 1;
+                  left: -263px;
+                  top: -159px;
+                  bottom: 0;
+                  height: 170px;
+                  width: 1px;
+                }
+
+                &::after {
+                  width: 253px;
+                  left: -263px;
+                }
+              }
+
+              &.solid-teal {
+                img {
+                  margin-top: 8px;
+                }
+
+                &::after {
+                  width: 562px;
+                  left: -572px;
+                }
+              }
+
+              &::after {
+                top: 11px;
+              }
+            }
+          }
+        }
       }
     }
   }
