--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -4,6 +4,8 @@ $color-white: #ffffff;
 $color-black: #000000;
 $color-brown: #2d0000;
 $color-blue: #547ba5;
+$color-blue2: #3d6c90;
+$color-blue3: #7da6c0;
 $color-blue--light: #f4f7fa;
 $color-blue--bright: #3370ac;
 $color-blue--rich: #274e75;
@@ -27,6 +29,7 @@ $color-fire--dark2: #b74414;
 $color-fire--light: #ff7135;
 $color-ronchi: #EBC959;
 $color-green: #64ccc9;
+$color-green2: #63aa93;
 $color-green--dark: #35a09c;
 $color-mint: #a0d8b3;
 $color-green--dark2: mix($color-black, $color-green--dark, 15%);
@@ -44,6 +47,7 @@ $color-orange--dark: mix($color-black, $color-orange, 10%);
 $color-orange--light: #f6d18f;
 $color-fm-gold: #86754D;
 
+$color-lt-grey-80: #a2adb7;
 $color-lt-grey-60: #b9c1c9;
 $color-lt-grey-20: #e7eaed;
 $color-solid-orange: #f86323;
